<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:padding="@dimen/_20sdp"
    tools:context=".activity.LoginActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_80sdp"
        android:text="@string/welcome_to"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        app:fontFamily="@font/roboto_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtText2Them"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text2them"
        android:textColor="@color/white"
        android:textSize="@dimen/_25sdp"
        app:fontFamily="@font/roboto_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtWelcome" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtPleaseLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/please_login_to_your_account"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        app:fontFamily="@font/roboto_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtText2Them" />

    <LinearLayout
        android:id="@+id/layoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPleaseLogin">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/edt_background"
            android:drawableStart="@drawable/email"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:textColor="@color/black"
            android:textColorHint="@color/blue_light"
            android:textSize="@dimen/_13sdp" />

        <RelativeLayout
            android:id="@+id/llPassword"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/edt_background">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@null"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="30"
                android:textColor="@color/black"
                android:textColorHint="@color/blue_light"
                android:textSize="@dimen/_13sdp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgPasswordHide"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/ic_close_eyes_signup"
                android:backgroundTint="@color/blue_light" />
        </RelativeLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_45sdp"
        android:background="@drawable/edt_background"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/sign_in"
        android:textColor="@color/blue_light"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutLogin" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="@dimen/_20sdp"
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        app:fontFamily="@font/roboto_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>