<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SendMessageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtFName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/edt_background"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textColor="@color/fontColor"
            android:textColorHint="@color/blue_light"
            android:textSize="@dimen/_13sdp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtLName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/edt_background"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/last_name"
            android:inputType="text"
            android:maxLength="30"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textColor="@color/fontColor"
            android:textColorHint="@color/blue_light"
            android:textSize="@dimen/_13sdp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/edt_background"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/mobile_number"
            android:inputType="number"
            android:maxLength="10"
            android:paddingStart="@dimen/_15sdp"
            android:textColor="@color/fontColor"
            android:textColorHint="@color/blue_light"
            android:paddingEnd="@dimen/_10sdp"
            android:textSize="@dimen/_13sdp" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtLMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/edt_background"
            android:fontFamily="@font/roboto_medium"
            android:gravity="top|start"
            android:hint="@string/message"
            android:inputType="textMultiLine"
            android:lines="6"
            android:paddingStart="@dimen/_15sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textColor="@color/fontColor"
            android:textColorHint="@color/blue_light"
            android:textSize="@dimen/_13sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSend"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />
    </LinearLayout>
</FrameLayout>