<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.navigation.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:layout_marginEnd="@dimen/_20sdp"
    android:background="@color/blue_light"
    android:fitsSystemWindows="true"
    app:headerLayout="@layout/drawer_header">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="1dp"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/llMyPlan"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/my_plan" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_vertical"
                android:text="@string/myplan"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:id="@+id/llChangePassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/change_password" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_vertical"
                android:text="@string/changePassword"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPrivacy"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/privacy" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_vertical"
                android:text="@string/privacyPolicy"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSetting"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/settings" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_vertical"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgArrow"
                android:layout_gravity="center_vertical"
                android:layout_width="22dp"
                android:layout_height="20dp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:src="@drawable/down" />

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/llDepartment"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_vertical"
                android:text="@string/department"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/llDesignation"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_vertical"
                android:text="@string/designation"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLogout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/logout" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_vertical"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

    </LinearLayout>
</com.google.android.material.navigation.NavigationView>